# barren

./: .gitignore  .gitmodules  CMakeLists.txt  run  run.cmd
barren/: CMakeLists.txt
barren-test/: CMakeLists.txt  main.c
barren/src/: barren.h  common.h  components.h  context.h  engine.c  errors.h  scene.c  scene.h  window.h
barren/src/bare-graphics/: buffer.c  buffer.h  camera.c  camera.h  commands.c  commands.h  descriptors.c  graphics.c  graphics.h  pipeline.c  pipeline.h  quad-renderer.c  quad-renderer.h  shader.c
barren/src/core/: context.h  render_system.c  render_system.h  scene.c  scene.h  window.c  window.h
barren/src/graphics/: buffer.c  camera.c  commands.c  graphics.c  shader.c  shader.h
barren/src/utils/: linear_allocator.c  math.c  math.h  memory.c  memory.h  string.c  string.h
sailboat/: CMakeLists.txt
sailboat-test/: CMakeLists.txt  main.c  main_view.c  main_view.h
sailboat/platform/: platform_linux.c
sailboat/src/: common.h  defines.c  defines.h  platform.h  sailboat.h
sailboat/src/core/: common.h  context.h  engine.c  engine.h  errors.h  render_system.c  render_system.h  scene.c  scene.h  view.c  view.h  window.c  window.h
sailboat/src/core/asset/: asset.h  asset_holder.c  asset_holder.h  asset_loader.c  asset_loader.h
sailboat/src/core/ephemeral/: asset.h  ephemeral.c  ephemeral.h
sailboat/src/core/event/: event.h  event_types.h  notifier.c  notifier.h
sailboat/src/core/scene/: components.c  components.h  scene.c  scene.h
sailboat/src/core/scene/system/: render_system.c  render_system.h
sailboat/src/core/system/: render_system.c
sailboat/src/core/view/: view.c  view.h  view_holder.c  view_holder.h
sailboat/src/core/window/: window.c  window.h  window_callbacks.c  window_callbacks.h
sailboat/src/graphics/: buffer.c  commands.c  commands.h  descriptors.c  descriptors.h  graphics.c  graphics.h  handle.c  handle.h  pipeline.c  pipeline.h  quad-renderer.c  quad-renderer.h  shader.c  shader.h  texture.c  texture.h
sailboat/src/graphics/renderer/: quad-renderer.c  quad-renderer.h
sailboat/src/subsystem/: logging.c  logging.h  sail_memory.c  sail_memory.h
sailboat/src/utils/: linear_allocator.c  linear_allocator.h  math.c  math.h  memory_utils.c
scripts/: build-debug  run  run.cmd
